# bdm

./: .deepsource.toml  .dockerignore  .env  .gitignore  .windsurfrules  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
airflow/dags/: connection_test.py
architecture/: airflow.yml  airflow_tasks.yml  database.yml  flink.yml  iceberg.yml  influxdb.yml  init-analytics-db.sh  kafka.yml  minio.yml  nginx.conf  openmetadata.yml  spark-defaults.conf
architecture/airflow/: Dockerfile  airflow.yml  airflow_tasks.yml
architecture/grafana/dashboards/: finazon-stream-dashboard.json
architecture/openmetadata/config/: flink_kafka.yaml  influxdb.yaml  postgres.yaml  spark.yaml
bdm/: utils.py
bdm/airflow/: connection_test.py
bdm/airflow/dags/: finazon.py  finnhub.py  reddit.py
bdm/airflow/finazon/: ingestion.py
bdm/airflow/finnhub/: enrichment.py  finnhub_enrichment_dag.py  ingestion.py  processing.py
bdm/airflow/reddit/: ingestion.py  processing.py
bdm/analytics/finazon/: Dockerfile  README.md  pom.xml
bdm/analytics/finnhub/: Dockerfile  requirements.txt  run_enrichment.py  start-spark-job.sh
bdm/ingestion/batch/: utils.py
dags/: application_dag.py
research_tests/: Dockerfile  docker-compose.yaml  finazon_websocket_producer.py
research_tests/tests/: alpha_vantage_test_producer.py  test_consumer.py
stock_stream_producer/: finazon_websocket_producer.py  requirements.txt
stock_stream_producer/tests/: kafka_test_producer.py  test_consumer.py
tasks/stock_stream_src/: Dockerfile  stock_stream_kafka_producer.py
(+94 files in other folders)
