[tool.poetry]
name = "bdm"
version = "0.1.0"
description = ""
authors = ["Yannik Queisler <dev.yannik.queisler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.5"
apache-airflow-providers-amazon = "^9.4.0"
apache-airflow-providers-apache-kafka = "^1.7.0"
apache-airflow-providers-docker = "^4.2.1"
click = "^8.1.8"
kafka-python = "^2.1.1"
websockets = "^15.0.1"
praw = "^7.8.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.5"
freezegun = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
